/**
 * 
 */
package com.parking.models;

/**
 * 
 */
public enum VehicleType {
	CAR, MOTORBIKE, ELECTRIC_BIKE
}
